examples/failing/UnderscoreModuleName.purs
module Bad_Module where

import Prelude

main = Debug.Trace.trace "Done"
